Fix style of Buttondown form on iOS.

--- a/theme/sass/components/_buttondown-email.scss
+++ b/theme/sass/components/_buttondown-email.scss
@@ -14,6 +14,10 @@
     font-family: $sans;
   }
 
+  input {
+    -webkit-appearance: none;
+  }
+
   label {
     grid-area: label;
     line-height: 2em;
